--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-project",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://syed-ali-jawad.github.io/TempTeller/",
